--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -5,7 +5,402 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Teste Globo</title>
+    <link rel="stylesheet" href="assets/css/main.css" />
 </head>
 <body>
+  <header class="header-wrapper">
+      <div class="container">
+        <div class="row">
+
+          <div class="col col-1 header-wrapper__menu-btn">
+            <i class="fas fa-bars"></i>
+          </div>
+
+          <div class="col col-11 header-wrapper__logo">
+            <img src="assets/media/infogloblo-logo.png"/>
+
+            <div class="header-wrapper__logo__squares">
+                <i class="fas fa-square"></i>
+                <i class="fas fa-square"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+  </header>
+
+  <main class="main-wrapper">
+      <section class="section main">
+        <div class="container">
+            <div class="row primary">
+                <article class="col col-12 col-md-6 article">
+                    <div class="article__image">
+                      <img src="assets/media/216x121-8.jpeg"  alt="nome"/>
+                    </div>
+
+                    <div class="article__data__title">
+                      <label class="article__label">label</label>
+                      <h3 class="article__title">Titulo</h3>
+                    </div>
+                    <div class="article__data__body">
+                      <p class="article__desc">
+                          Descrição. Normalmente Curtas
+                      </p>
+                      <a class="article__ver" href="#">
+                          <i class="fas fa-share-square"></i>
+                      </a>
+                    </div>
+                </article>
+
+                <article class="col col-12 col-md-6 article">
+                    <div class="article__image">
+                      <img src="assets/media/216x121-8.jpeg"  alt="nome"/>
+                    </div>
+
+                    <div class="article__data__title">
+                      <label class="article__label">label</label>
+                      <h3 class="article__title">Titulo</h3>
+                    </div>
+                    <div class="article__data__body">
+                      <p class="article__desc">
+                          Descrição. Normalmente Curtas
+                      </p>
+                      <a class="article__ver" href="#">
+                          <i class="fas fa-share-square"></i>
+                      </a>
+                    </div>
+                </article>
+            </div>
+
+            <div class="row secondary">
+                <article class="col col-12 col-md-6 article">
+                    <div class="article__image">
+                      <img src="assets/media/216x121-8.jpeg"  alt="nome"/>
+                    </div>
+
+                    <div class="article__data__title">
+                      <label class="article__label">label</label>
+                      <h3 class="article__title">Titulo</h3>
+                    </div>
+                    <div class="article__data__body">
+                      <p class="article__desc">
+                          Descrição. Normalmente Curtas
+                      </p>
+                      <a class="article__ver" href="#">
+                          <i class="fas fa-share-square"></i>
+                      </a>
+                    </div>
+                </article>
+
+                <article class="col col-12 col-md-6 article">
+                    <div class="article__image">
+                      <img src="assets/media/216x121-8.jpeg"  alt="nome"/>
+                    </div>
+
+                    <div class="article__data__title">
+                      <label class="article__label">label</label>
+                      <h3 class="article__title">Titulo</h3>
+                    </div>
+                    <div class="article__data__body">
+                      <p class="article__desc">
+                          Descrição. Normalmente Curtas
+                      </p>
+                      <a class="article__ver" href="#">
+                          <i class="fas fa-share-square"></i>
+                      </a>
+                    </div>
+                </article>
+            </div>
+
+            <div class="row commons">
+              <article class="col col-12 col-md-3 article">
+                  <div class="article__image">
+                    <img src="assets/media/216x121-8.jpeg"  alt="nome"/>
+                  </div>
+
+                  <div class="article__data__title">
+                    <label class="article__label">label</label>
+                    <h3 class="article__title">Titulo</h3>
+                  </div>
+                  <div class="article__data__body">
+                    <p class="article__desc">
+                        Descrição. Normalmente Curtas
+                    </p>
+                    <a class="article__ver" href="#">
+                        <i class="fas fa-share-square"></i>
+                    </a>
+                  </div>
+              </article>
+
+              <article class="col col-12 col-md-3 article">
+                  <div class="article__image">
+                    <img src="assets/media/216x121-8.jpeg"  alt="nome"/>
+                  </div>
+
+                  <div class="article__data__title">
+                    <label class="article__label">label</label>
+                    <h3 class="article__title">Titulo</h3>
+                  </div>
+                  <div class="article__data__body">
+                    <p class="article__desc">
+                        Descrição. Normalmente Curtas
+                    </p>
+                    <a class="article__ver" href="#">
+                        <i class="fas fa-share-square"></i>
+                    </a>
+                  </div>
+              </article>
+
+              <article class="col col-12 col-md-3 article">
+                  <div class="article__image">
+                    <img src="assets/media/216x121-8.jpeg"  alt="nome"/>
+                  </div>
+
+                  <div class="article__data__title">
+                    <label class="article__label">label</label>
+                    <h3 class="article__title">Titulo</h3>
+                  </div>
+                  <div class="article__data__body">
+                    <p class="article__desc">
+                        Descrição. Normalmente Curtas
+                    </p>
+                    <a class="article__ver" href="#">
+                        <i class="fas fa-share-square"></i>
+                    </a>
+                  </div>
+              </article>
+
+              <article class="col col-12 col-md-3 article">
+                  <div class="article__image">
+                    <img src="assets/media/216x121-8.jpeg"  alt="nome"/>
+                  </div>
+
+                  <div class="article__data__title">
+                    <label class="article__label">label</label>
+                    <h3 class="article__title">Titulo</h3>
+                  </div>
+                  <div class="article__data__body">
+                    <p class="article__desc">
+                        Descrição. Normalmente Curtas
+                    </p>
+                    <a class="article__ver" href="#">
+                        <i class="fas fa-share-square"></i>
+                    </a>
+                  </div>
+              </article>
+            </div>
+        </div>
+      </section>
+
+      <div class="advertising-wrapper">
+        <div class="container">
+          <div class="advertising__banner">
+            advertising
+          </div>
+        </div>
+      </div>
+
+      <section class="section brasil">
+        <div class="container">
+          <h2 class="section__title">Brasil</h2>
+          <div class="row commons">
+
+              <article class="col col-12 col-md-3 article">
+                  <div class="article__image">
+                    <img src="assets/media/216x121-8.jpeg"  alt="nome"/>
+                  </div>
+
+                  <div class="article__data__title">
+                    <label class="article__label">label</label>
+                    <h3 class="article__title">Titulo</h3>
+                  </div>
+                  <div class="article__data__body">
+                    <p class="article__desc">
+                        Descrição. Normalmente Curtas
+                    </p>
+                    <a class="article__ver" href="#">
+                        <i class="fas fa-share-square"></i>
+                    </a>
+                  </div>
+              </article>
+
+            <article class="col col-12 col-md-3 article">
+                <div class="article__image">
+                  <img src="assets/media/216x121-8.jpeg"  alt="nome"/>
+                </div>
+
+                <div class="article__data__title">
+                  <label class="article__label">label</label>
+                  <h3 class="article__title">Titulo</h3>
+                </div>
+                <div class="article__data__body">
+                  <p class="article__desc">
+                      Descrição. Normalmente Curtas
+                  </p>
+                  <a class="article__ver" href="#">
+                      <i class="fas fa-share-square"></i>
+                  </a>
+                </div>
+            </article>
+
+            <article class="col col-12 col-md-3 article">
+                <div class="article__image">
+                  <img src="assets/media/216x121-8.jpeg"  alt="nome"/>
+                </div>
+
+                <div class="article__data__title">
+                  <label class="article__label">label</label>
+                  <h3 class="article__title">Titulo</h3>
+                </div>
+                <div class="article__data__body">
+                  <p class="article__desc">
+                      Descrição. Normalmente Curtas
+                  </p>
+                  <a class="article__ver" href="#">
+                      <i class="fas fa-share-square"></i>
+                  </a>
+                </div>
+            </article>
+
+            <article class="col col-12 col-md-3 article">
+                <div class="article__image">
+                  <img src="assets/media/216x121-8.jpeg"  alt="nome"/>
+                </div>
+
+                <div class="article__data__title">
+                  <label class="article__label">label</label>
+                  <h3 class="article__title">Titulo</h3>
+                </div>
+                <div class="article__data__body">
+                  <p class="article__desc">
+                      Descrição. Normalmente Curtas
+                  </p>
+                  <a class="article__ver" href="#">
+                      <i class="fas fa-share-square"></i>
+                  </a>
+                </div>
+            </article>
+
+          </div>
+          <div class="row">
+            <div class="col col-12 section__divisor">
+              <a class="section__divisor__loadMore" href="#">Brasil<i class="fas fa-plus"></i></a>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="section mundo">
+        <div class="container">
+          <h2 class="section__title">Mundo</h2>
+          <div class="row commons">
+
+              <article class="col col-12 col-md-3 article">
+                  <div class="article__image">
+                    <img src="assets/media/216x121-8.jpeg"  alt="nome"/>
+                  </div>
+
+                  <div class="article__data__title">
+                    <label class="article__label">label</label>
+                    <h3 class="article__title">Titulo</h3>
+                  </div>
+                  <div class="article__data__body">
+                    <p class="article__desc">
+                        Descrição. Normalmente Curtas
+                    </p>
+                    <a class="article__ver" href="#">
+                        <i class="fas fa-share-square"></i>
+                    </a>
+                  </div>
+              </article>
+
+              <article class="col col-12 col-md-3 article">
+                  <div class="article__image">
+                    <img src="assets/media/216x121-8.jpeg"  alt="nome"/>
+                  </div>
+
+                  <div class="article__data__title">
+                    <label class="article__label">label</label>
+                    <h3 class="article__title">Titulo</h3>
+                  </div>
+                  <div class="article__data__body">
+                    <p class="article__desc">
+                        Descrição. Normalmente Curtas
+                    </p>
+                    <a class="article__ver" href="#">
+                        <i class="fas fa-share-square"></i>
+                    </a>
+                  </div>
+              </article>
+
+              <article class="col col-12 col-md-3 article">
+                  <div class="article__image">
+                    <img src="assets/media/216x121-8.jpeg"  alt="nome"/>
+                  </div>
+
+                  <div class="article__data__title">
+                    <label class="article__label">label</label>
+                    <h3 class="article__title">Titulo</h3>
+                  </div>
+                  <div class="article__data__body">
+                    <p class="article__desc">
+                        Descrição. Normalmente Curtas
+                    </p>
+                    <a class="article__ver" href="#">
+                        <i class="fas fa-share-square"></i>
+                    </a>
+                  </div>
+              </article>
+
+              <article class="col col-12 col-md-3 article">
+                  <div class="article__image">
+                    <img src="assets/media/216x121-8.jpeg"  alt="nome"/>
+                  </div>
+
+                  <div class="article__data__title">
+                    <label class="article__label">label</label>
+                    <h3 class="article__title">Titulo</h3>
+                  </div>
+                  <div class="article__data__body">
+                    <p class="article__desc">
+                        Descrição. Normalmente Curtas
+                    </p>
+                    <a class="article__ver" href="#">
+                        <i class="fas fa-share-square"></i>
+                    </a>
+                  </div>
+              </article>
+
+          </div>
+
+          <div class="row">
+            <div class="col col-12 section__divisor">
+              <a class="section__divisor__loadMore" href="#">Mundo<i class="fas fa-plus"></i></a>
+            </div>
+          </div>
+        </div>
+      </section>
+  </main>
+
+  <footer class="footer-wrapper">
+      <div class="container">
+          <div class="row">
+
+            <div class="col col-12 col-md-2 footer-wrapper__logo">
+                <img src="assets/media/infogloblo-logo.png"/>
+
+                <div class="footer-wrapper__logo__squares">
+                    <i class="fas fa-square"></i>
+                    <i class="fas fa-square"></i>
+                </div>
+            </div>
+
+            <div class="col col-12 offset-0 col-md-3 offset-md-7 footer-wrapper__copy">
+              <p>Copyright @2019</p>
+              <p>Todos os direitos reservados</p>
+            </div>
+          </div>
+        </div>
+  </footer>
+  <script src="assets/js/main.js"></script>
 </body>
 </html>
