[globo] - Com testes

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -28,8 +28,8 @@
       </div>
   </header>
 
-  <main class="main-wrapper">
-      <section class="section main">
+  <main class="main-wrapper" id="main-wrapper">
+      <!-- <section class="section main">
         <div class="container">
             <div class="row primary">
                 <article class="col col-12 col-md-6 article">
@@ -189,9 +189,9 @@
               </article>
             </div>
         </div>
-      </section>
+      </section> -->
 
-      <div class="advertising-wrapper">
+      <div class="advertising-wrapper" id="advertising">
         <div class="container">
           <div class="advertising__banner">
             advertising
@@ -199,7 +199,7 @@
         </div>
       </div>
 
-      <section class="section brasil">
+      <!-- <section class="section brasil">
         <div class="container">
           <h2 class="section__title">Brasil</h2>
           <div class="row commons">
@@ -378,7 +378,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
   </main>
 
   <footer class="footer-wrapper">
