--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -30,195 +30,6 @@
 
   <main class="main-wrapper" id="main-wrapper">
 
-
-      <!-- <div class="advertising-wrapper" id="advertising">
-        <div class="container">
-          <div class="advertising__banner">
-            advertising
-          </div>
-        </div>
-      </div> -->
-
-      <!-- <section class="section brasil">
-        <div class="container">
-          <h2 class="section__title">Brasil</h2>
-          <div class="row commons">
-
-              <article class="col col-12 col-md-3 article">
-                  <div class="article__image">
-                    <img src="assets/media/216x121-8.jpeg"  alt="nome"/>
-                  </div>
-
-                  <div class="article__data__title">
-                    <label class="article__label">label</label>
-                    <h3 class="article__title">Titulo</h3>
-                  </div>
-                  <div class="article__data__body">
-                    <p class="article__desc">
-                        Descrição. Normalmente Curtas
-                    </p>
-                    <a class="article__ver" href="#">
-                        <i class="fas fa-share-square"></i>
-                    </a>
-                  </div>
-              </article>
-
-            <article class="col col-12 col-md-3 article">
-                <div class="article__image">
-                  <img src="assets/media/216x121-8.jpeg"  alt="nome"/>
-                </div>
-
-                <div class="article__data__title">
-                  <label class="article__label">label</label>
-                  <h3 class="article__title">Titulo</h3>
-                </div>
-                <div class="article__data__body">
-                  <p class="article__desc">
-                      Descrição. Normalmente Curtas
-                  </p>
-                  <a class="article__ver" href="#">
-                      <i class="fas fa-share-square"></i>
-                  </a>
-                </div>
-            </article>
-
-            <article class="col col-12 col-md-3 article">
-                <div class="article__image">
-                  <img src="assets/media/216x121-8.jpeg"  alt="nome"/>
-                </div>
-
-                <div class="article__data__title">
-                  <label class="article__label">label</label>
-                  <h3 class="article__title">Titulo</h3>
-                </div>
-                <div class="article__data__body">
-                  <p class="article__desc">
-                      Descrição. Normalmente Curtas
-                  </p>
-                  <a class="article__ver" href="#">
-                      <i class="fas fa-share-square"></i>
-                  </a>
-                </div>
-            </article>
-
-            <article class="col col-12 col-md-3 article">
-                <div class="article__image">
-                  <img src="assets/media/216x121-8.jpeg"  alt="nome"/>
-                </div>
-
-                <div class="article__data__title">
-                  <label class="article__label">label</label>
-                  <h3 class="article__title">Titulo</h3>
-                </div>
-                <div class="article__data__body">
-                  <p class="article__desc">
-                      Descrição. Normalmente Curtas
-                  </p>
-                  <a class="article__ver" href="#">
-                      <i class="fas fa-share-square"></i>
-                  </a>
-                </div>
-            </article>
-
-          </div>
-          <div class="row">
-            <div class="col col-12 section__divisor">
-              <a class="section__divisor__loadMore" href="#">Brasil<i class="fas fa-plus"></i></a>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="section mundo">
-        <div class="container">
-          <h2 class="section__title">Mundo</h2>
-          <div class="row commons">
-
-              <article class="col col-12 col-md-3 article">
-                  <div class="article__image">
-                    <img src="assets/media/216x121-8.jpeg"  alt="nome"/>
-                  </div>
-
-                  <div class="article__data__title">
-                    <label class="article__label">label</label>
-                    <h3 class="article__title">Titulo</h3>
-                  </div>
-                  <div class="article__data__body">
-                    <p class="article__desc">
-                        Descrição. Normalmente Curtas
-                    </p>
-                    <a class="article__ver" href="#">
-                        <i class="fas fa-share-square"></i>
-                    </a>
-                  </div>
-              </article>
-
-              <article class="col col-12 col-md-3 article">
-                  <div class="article__image">
-                    <img src="assets/media/216x121-8.jpeg"  alt="nome"/>
-                  </div>
-
-                  <div class="article__data__title">
-                    <label class="article__label">label</label>
-                    <h3 class="article__title">Titulo</h3>
-                  </div>
-                  <div class="article__data__body">
-                    <p class="article__desc">
-                        Descrição. Normalmente Curtas
-                    </p>
-                    <a class="article__ver" href="#">
-                        <i class="fas fa-share-square"></i>
-                    </a>
-                  </div>
-              </article>
-
-              <article class="col col-12 col-md-3 article">
-                  <div class="article__image">
-                    <img src="assets/media/216x121-8.jpeg"  alt="nome"/>
-                  </div>
-
-                  <div class="article__data__title">
-                    <label class="article__label">label</label>
-                    <h3 class="article__title">Titulo</h3>
-                  </div>
-                  <div class="article__data__body">
-                    <p class="article__desc">
-                        Descrição. Normalmente Curtas
-                    </p>
-                    <a class="article__ver" href="#">
-                        <i class="fas fa-share-square"></i>
-                    </a>
-                  </div>
-              </article>
-
-              <article class="col col-12 col-md-3 article">
-                  <div class="article__image">
-                    <img src="assets/media/216x121-8.jpeg"  alt="nome"/>
-                  </div>
-
-                  <div class="article__data__title">
-                    <label class="article__label">label</label>
-                    <h3 class="article__title">Titulo</h3>
-                  </div>
-                  <div class="article__data__body">
-                    <p class="article__desc">
-                        Descrição. Normalmente Curtas
-                    </p>
-                    <a class="article__ver" href="#">
-                        <i class="fas fa-share-square"></i>
-                    </a>
-                  </div>
-              </article>
-
-          </div>
-
-          <div class="row">
-            <div class="col col-12 section__divisor">
-              <a class="section__divisor__loadMore" href="#">Mundo<i class="fas fa-plus"></i></a>
-            </div>
-          </div>
-        </div>
-      </section> -->
   </main>
 
   <footer class="footer-wrapper">
@@ -241,6 +52,6 @@
           </div>
         </div>
   </footer>
-  <script src="assets/js/main.js"></script>
+  <script src="assets/scripts/main.js"></script>
 </body>
 </html>
