--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -60,6 +60,6 @@
           </div>
         </div>
   </footer>
-  <script src="assets/js/main.js"></script>
+  <script src="assets/scripts/main.js"></script>
 </body>
 </html>
